--- a/css/style.css
+++ b/css/style.css
@@ -713,6 +713,12 @@ span.open-info {
 .share-social-icon p {
   display: inline-block;
   margin: 6px;
+  width: auto;
+}
+
+.share-social-icon p:hover {
+  color: #fc5f45;
+  transition: 0.2s;
 }
 
 .full-info-left {
@@ -758,6 +764,7 @@ span.open-info {
 .open-info-activ {
   opacity: 1;
   transition: 0.5s;
+  z-index: 5;
 }
 
 /*main stats*/
@@ -1338,6 +1345,7 @@ main .stats {
   font-family: "poppins-regular";
   color: #272727;
   margin: 0 20px;
+  width: auto;
 }
 
 /*main blog*/
@@ -1619,6 +1627,14 @@ main .stats {
   font-family: "poppins-semibold";
   color: white;
   text-transform: uppercase;
+  cursor: pointer;
+}
+
+.contact form .submit:hover {
+  background-color: #fc5f45;
+  box-shadow: 0 0 0px 3px #fc5f45;
+  border: 2px solid #eee;
+  transition: 0.5s;
 }
 
 footer {
@@ -1682,6 +1698,11 @@ footer div p {
   margin: 0 5px;
 }
 
+footer img:hover {
+  transform: rotate(360deg);
+  transition: 1s;
+}
+
 @media only screen and (min-width: 100px) and (max-width: 1170px) {
   /* общие */
   .container {
@@ -1716,6 +1737,11 @@ footer div p {
     top: 21px;
     right: 25px;
     z-index: 12;
+  }
+
+  .container .number-block {
+    font-size: 150px;
+    top: 45px;
   }
 
   .about .container .number-block {
@@ -1818,7 +1844,7 @@ footer div p {
   .about .container div {
     position: relative;
     width: 100%;
-    padding: 130px 30px 30px 40px;
+    padding: 70px 30px 30px 40px;
     height: auto;
     left: 0;
     display: flex;
@@ -1837,6 +1863,16 @@ footer div p {
 
   .services .container {
     padding-bottom: 0px;
+    padding-top: 70px;
+  }
+  .services .container h2 {
+    font-size: 55px;
+  }
+  .services .container .services-articles h2 {
+    font-size: 19px;
+  }
+  .services .container .number-block {
+    top: -12px;
   }
 
   .services-articles {
@@ -1853,6 +1889,9 @@ footer div p {
 
   .team {
     height: auto;
+  }
+  .team .container {
+    padding: 70px 0 40px;
   }
 
   .team-articles {
@@ -1957,6 +1996,10 @@ footer div p {
 
   .work .container {
     padding-bottom: 30px;
+    padding-top: 70px;
+  }
+  .work .container .number-block {
+    top: -13px;
   }
 
   .work-block img {
@@ -1972,6 +2015,10 @@ footer div p {
 
   .testimonials .container {
     width: auto;
+    padding: 70px 15px 5px;
+  }
+  .testimonials .container .number-block {
+    top: -12px;
   }
 
   .slider {
@@ -2016,6 +2063,13 @@ footer div p {
     padding: 45px 10px 10px 85px;
   }
 
+  .blog .container {
+    padding-top: 70px;
+  }
+  .blog .container .number-block {
+    top: -10px;
+  }
+
   .blog-grid {
     display: block;
   }
@@ -2032,7 +2086,14 @@ footer div p {
   }
 
   .pricing .container {
+    padding-top: 70px;
     padding-bottom: 30px;
+  }
+  .pricing .container .number-block {
+    top: -13px;
+  }
+  .pricing .container h2 {
+    font-size: 46px;
   }
 
   .pricing-elements {
@@ -2047,6 +2108,12 @@ footer div p {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
   }
 
+  .contact .container {
+    padding: 70px 0 0;
+  }
+  .contact .container .number-block {
+    top: -12px;
+  }
   .contact form {
     width: auto;
   }
@@ -2085,7 +2152,10 @@ footer div p {
   }
 
   .select .container {
-    padding: 150px 0 0px;
+    padding: 70px 0 0px;
+  }
+  .select .container .number-block {
+    top: -13px;
   }
 
   .select article {
