--- a/css/style.css
+++ b/css/style.css
@@ -1889,7 +1889,8 @@ footer img:hover {
   }
 
   .services-articles article {
-    margin: 20px;
+    display: block !important;
+    margin: 0 auto !important;
     width: 262px !important;
   }
 
