--- a/css/style.css
+++ b/css/style.css
@@ -1724,6 +1724,7 @@ footer img:hover {
   height: 100vh;
   overflow: hidden;
   animation-delay: 1s;
+  background-color: #78a2b7;
 }
 
 .item-1 {
@@ -2029,7 +2030,7 @@ footer img:hover {
 
   .home .container div {
     margin: 0;
-    margin-bottom: 91px;
+    margin-bottom: 0;
   }
 
   .about .container {
